welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:6: error: Boolean does not take parameters
    else (bSmile==false) {
                         ^monkeyTrouble:10: error: Boolean does not take parameters
  }else(aSmile) {
                ^